--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,11 @@
     Welcome to {{ title }}
   </h1>
 </div>
+<nav>
+  <a routerLink="/records">Records</a>
+</nav>
+<nav>
+  <a routerLink="./">Home</a>
+</nav>
 <app-messages></app-messages>
 <router-outlet></router-outlet>
