--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,8 @@
   </h1>
 </div>
 <nav>
+  <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/records">Records</a>
 </nav>
-<nav>
-  <a routerLink="./">Home</a>
-</nav>
-<app-messages></app-messages>
 <router-outlet></router-outlet>
+<app-messages></app-messages>
