--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 <h3>Top Heroes</h3>
 <div class="grid grid-pad">
-  <a *ngFor="let record of records" class="col-1-4">
+  <a *ngFor="let record of records" class="col-1-4" 
+      routerLink="/detail/{{record.id}}">
     <div class="module record">
       <h4>{{record.title}}</h4>
     </div>
