--- a/src/app/records/records.component.css
+++ b/src/app/records/records.component.css
@@ -28,6 +28,17 @@
   background-color: #DDD;
   left: .1em;
 }
+.records a {
+  color: #888;
+  text-decoration: none;
+  position: relative;
+  display: block;
+  width: 30em;
+}
+ 
+.records a:hover {
+  color:#607D8B;
+}
 .records .text {
   position: relative;
   top: -3px;
