--- a/src/app/records/records.component.html
+++ b/src/app/records/records.component.html
@@ -1,9 +1,8 @@
 <h2>My Records</h2>
-<app-record-detail [record]="selectedRecord"></app-record-detail>
 <ul class="records">
-  <li *ngFor="let record of records"
-      [class.selected]="record === selectedRecord"
-      (click)="onSelect(record)">
-    <span class="badge">{{record.id}}</span><b>TITLE:</b> {{record.title}} <b>ARTIST:</b> {{record.artist}}
+  <li *ngFor="let record of records">
+    <a routerLink="/detail/{{record.id}}"> 
+      <span class="badge">{{record.id}}</span><b>TITLE:</b> {{record.title}} <b>ARTIST:</b> {{record.artist}}
+    </a> 
   </li>
 </ul>
