add go back button in record detail
add goback function in record detail class
add goback button in record detail html

--- a/src/app/record-detail/record-detail.component.html
+++ b/src/app/record-detail/record-detail.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="record">
+  <button (click)="goBack()">go back</button>
   <h3>{{record.title | uppercase}} Details</h3>
   <div><span>id: </span>{{record.id}}</div>
   <div>
