--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<h3>Top Heroes</h3>
+<h3>Top Records</h3>
 <div class="grid grid-pad">
   <a *ngFor="let record of records" class="col-1-4" 
       routerLink="/detail/{{record.id}}">
