update record detail routing
move record detail routing as a child of record routing

make changes accordingly in dashboard.component.html and records.component.html

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <h3>Top Records</h3>
 <div class="grid grid-pad">
   <a *ngFor="let record of records" class="col-1-4" 
-      routerLink="/detail/{{record.id}}">
+      routerLink="/records/detail/{{record.id}}">
     <div class="module record">
       <h4>{{record.title}}</h4>
     </div>
