--- a/src/app/records/records.component.html
+++ b/src/app/records/records.component.html
@@ -1,7 +1,8 @@
 <h2>My Records</h2>
+<router-outlet></router-outlet>
 <ul class="records">
   <li *ngFor="let record of records">
-    <a routerLink="/detail/{{record.id}}"> 
+    <a routerLink="/records/detail/{{record.id}}"> 
       <span class="badge">{{record.id}}</span><b>TITLE:</b> {{record.title}} <b>ARTIST:</b> {{record.artist}}
     </a> 
   </li>
